[package]
name = "quinn-holepunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
async-trait = "0.1.62"
bytes = "1.3.0"
clap = { version = "4", features = ["derive"] }
der = { version = "0.6.1", features = ["alloc", "derive"] }
ed25519-dalek = "1.0.1"
futures = "0.3.25"
hex = "0.4.3"
postcard = { version = "1.0.2", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = "0.9.3"
quinn-udp = "0.3.2"
rand = "0.7"
rcgen = "0.10.0"
rustls = { version = "0.20.8", features = ["dangerous_configuration"]}
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io-util", "io"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unsigned-varint = { version = "0.7.1", features = ["futures"] }
webpki = "0.22.0"
x509-parser = "0.14.0"
